test/Destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: springboot-home
  namespace: springboot2
spec:
  host: kubernetes.default.svc
  trafficPolicy:
    loadBalancer:
      simple: LEAST_REQUEST
