test/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollout-bluegreen
  namespace: springboot
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rollout-bluegreen
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: 'true'
      labels:
        app: rollout-bluegreen
    spec:
      containers:
      - name: superapi
        image: shahadsha/hello-world:35
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "50m"
        ports:
        - containerPort: 6789
  strategy:
    blueGreen:
      activeService: rollout-bluegreen-active
      previewService: rollout-bluegreen-preview
      autoPromotionEnabled: false
