test/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: rollout-bluegreen-active
  namespace: springboot
spec:
  selector:
    app: rollout-bluegreen
  ports:
  - name: http
    port: 6789
  type: ClusterIP

---
kind: Service
apiVersion: v1
metadata:
  name: rollout-bluegreen-preview
  namespace: springboot
spec:
  selector:
    app: rollout-bluegreen
  ports:
  - name: http
    port: 6789
  type: ClusterIP
