test/VirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: springboot-vs
  namespace: springboot
spec:
  hosts:
  - "*"
  gateways:
  - springboot-gateway
  http:  
  - match:
    - uri:
        exact: /hello
    - uri:
        prefix: /hello  
    route:
    - destination:
        host: "rollout-bluegreen-active.springboot.svc.cluster.local"
        port:
          number: 6789
